syntax = "proto3";
package protos;
option go_package = "github.com/mauleyzaola/maupod/src/protos";

import "media.proto";

message PlayList{
    string id = 1;
    string name = 2;
}

message PlaylistItem
{
    string id = 1;
    PlayList playlist = 2;
    int32 position = 3;
    Media media = 4;
}

message PlaylistDeleteInput {
    string id = 1;
    bool forceDeleteChildren = 2;
}